<RelativeLayout android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.satyam.redhelp.LoginActivity"
  android:layout_width="match_parent"
    android:background="@color/colorPrimary"

>


    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="182dp"
        android:layout_height="140dp"
        android:src="@drawable/logo"
        android:layout_marginTop="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/username"
        android:layout_height="50dp"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/image_logo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentStart="true" />

    <Button
    android:id="@+id/bForgot"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:textColor="@android:color/white"
    android:background="@drawable/transparent_black_ten_percent"
    android:text="@string/forgot_password"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp" />

    <EditText
    android:id="@+id/etPassword"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:inputType="textPassword"
    android:hint="@string/password"
        android:layout_weight="1"
        android:layout_marginTop="55dp"
        android:layout_alignTop="@+id/etUserName"
        android:layout_alignLeft="@+id/etUserName"
        android:layout_alignStart="@+id/etUserName"
        android:layout_alignRight="@+id/etUserName"
        android:layout_alignEnd="@+id/etUserName" />

    <Button
    android:id="@+id/bRegister"
    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    android:padding="5dp"
    android:textColor="@android:color/white"
    android:background="@drawable/transparent_black_ten_percent"
    android:text="@string/register"
        android:layout_below="@+id/bLogin"
        android:layout_alignLeft="@+id/bLogin"
        android:layout_alignStart="@+id/bLogin"
        android:layout_marginTop="22dp" />

    <Button
    android:id="@+id/bLogin"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:textStyle="bold"
    android:background="@drawable/white_button_bg"
    android:textColor="@color/colorPrimary"
    android:text="@string/sign_in"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/etPassword"
        android:layout_alignLeft="@+id/bForgot"
        android:layout_alignStart="@+id/bForgot"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:onClick="login"/>

</RelativeLayout>
